Texture Selector and Save World

--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,16 @@ body {
 .cursor {
   color: white;
 }
+
+.texture-selector {
+  transform: scale(5);
+}
+
+.texture-selector img.active {
+  border: 2px solid red;
+}
+
+.menu {
+  top: 10px;
+  left: 10px;
+}
